# formal

./: Cargo.toml  README.md  test.json
examples/: automatons.rs  grammars.rs
src/: lib.rs  task-deterministic.rs  task-earley.rs  task-lr1.rs  task-regular-parsing-proof.md  task-regular-parsing.rs
src/automatons/: deterministic.rs  display.rs  mod.rs  non_deterministic.rs
src/data_structures/: automaton_like.rs  deterministic.rs  graph.rs  mod.rs  non_deterministic.rs  reg_exp.rs  single_accepting.rs
src/grammars/: context_free.rs  earley.rs  generic_main.rs  lr1.rs  mod.rs
tests/test-data/: an-bn.txt  bracket-sequence.txt
