[package]
name = "formal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "task-deterministic"
path = "src/task-deterministic.rs"

[[bin]]
name = "task-regular-parsing"
path = "src/task-regular-parsing.rs"
